Fixed h3 "Special Events" with overflow: hidden

--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ img {
 
 header {
 	background-color: #441819;
-	padding-top: 2em;
+	padding-top: 1.5em;
 	padding-bottom: 0.5em;
 	margin-bottom: 0;
 }
@@ -160,7 +160,7 @@ a:hover {
 }
 
 .special {
-padding: 0;
+overflow: hidden;
 }
 
 .friends, .livemusic {
@@ -175,6 +175,14 @@ padding: 0;
 
 .livemusic {
 	float: right;
+}
+
+figcaption {
+	font-family: 'Helvetica', sans-serif;
+	font-weight: lighter;
+	font-size: 0.9em;
+	color: #fff;
+	padding: 1em;
 }
 
 footer {
